--- a/01-week/components/typescript/package.json
+++ b/01-week/components/typescript/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "bs": "npm run build && npm run start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14"
   }
 }
